TODO: Tidy up jquery.sceditor.js

Version 1.2.9:
	Started on improving accessibility
	Added charset option
	Updated quote command to support authors
	Fix Webkit based bug causing newlines not to be added sometimes
		- Thanks to Robin for reporting and extra help providing information
	Added Swedish translation kindly submitted by Robin
	Added French translation kindly submitted by Nicolas
	Fix extra newlines being included in quotes
	Removed undo/redo commands as they cause Safari to reopen closed tabs if they have been closed
		after the point being undone.
		- This happens with other editors and also on plain HTML text inputs. Thanks to Robin for finding and reporting.
	Fixed header (h1, h2, h3, ect.) releated BBCode bug
	Removed Undo/Redo images from the sprite
	Small tweak to BBCode parser to improve IE UX

Version 1.2.8:
	Updated to use contentEditable if supported. This fixes some selection issues in IE9
	Fixed problem with YouTube videos hiding after switching between WYSIWYG and source modes
	Added new build page
	Fixed bug causing quotes with author attributes to lose their content
	Fixed HTML5 form required attribute compatiblity
	Added destroy function to enable removing the editor
	Updated editor to only pre-load emoticons when they are in the toolbar.
		Idea from kaen25's[https://github.com/kaen25/] fork.
	Added Dutch translation kindly submitted by Samuel
	Added German translation kindly submitted by Tina
	Changed I18n to default to just the ISO 639-1 and only include the dialect when needed

Version 1.2.7:
	Added options for emoticons to require spaces around them for compatibility.
		i.e. If you have the emoticon :/ it will not replace http://. This
		mode currently has limited As You Tyne emoticon conversion.
	Fixed problem with YouTube dropdown
	Fixed Opera problem with [url]
	Fixed problem with default style causing table to have size tags wrapped around them
	Fixed dropdowns being hidden behind YouTube videos