@@ -1,4 +1,7 @@
-TODO: Tidy up jquery.sceditor.js
+TODO:
+	Tidy up jquery.sceditor.js code - Will break compatibility as functions need renaming, ect.
+	Maybe add an onpaste handler to filter pasted text (would be good for BBCode)
+	Add XHTML output support
 
 Version 1.2.9:
 	Started on improving accessibility
